# email_budget

./: .gitignore  CLAUDE.md  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
docs/: DESIGN.md  PRD.md  TECH_SPEC.md  system.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: ios.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/categorizer/: defaults.rs  mod.rs  rules.rs
src-tauri/src/commands/: budgets.rs  categories.rs  dashboard.rs  gmail.rs  import.rs  mod.rs  ocr.rs  settings.rs  transactions.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/gmail/: client.rs  config.rs  mod.rs  oauth.rs  oauth_mobile.rs  poller.rs  sync.rs  tokens.rs  types.rs
src-tauri/src/ocr/: mod.rs  receipt_text_parser.rs  types.rs
src-tauri/src/parser/: engine.rs  mod.rs  types.rs
src-tauri/src/parser/vendors/: amazon.rs  doordash.rs  generic.rs  mod.rs  uber.rs  uber_eats.rs  venmo.rs
src-tauri/swift-plugins/receipt-capture/: Package.swift
src-tauri/swift-plugins/receipt-capture/Sources/: ReceiptCapturePlugin.swift
src/hooks/: useBudgets.ts  useCamera.ts  useCategories.ts  useDashboard.ts  useGmail.ts  useHaptics.ts  useImport.ts  usePlatform.ts  useSwipeAction.ts  useTransactions.ts
src/lib/: constants.ts  format.ts  platform.ts  tauri.ts
src/pages/: Budgets.tsx  Dashboard.tsx  Import.tsx  Settings.tsx  Transactions.tsx
src/stores/: budgetStore.ts  categoryStore.ts  gmailStore.ts  settingsStore.ts  transactionStore.ts
src/styles/: globals.css
src/types/: budget.ts  gmail.ts  (+4 more)
(+41 files in other folders)
