[package]
name = "email-budget"
version = "0.1.0"
description = "Email Budget - Track spending by parsing email receipts"
authors = ["Email Budget Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "email_budget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
scraper = "0.22"
regex = "1.11"
thiserror = "2.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
hex = "0.4"
once_cell = "1.20"
oauth2 = "5.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
urlencoding = "2.1"
open = "5"
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
